perf: macOS에서 vips-ffm 벤치마크 실행 및 결과 업데이트
- VipsBenchmarkState: macOS SIP 우회를 위해 Homebrew 라이브러리 절대 경로 자동 등록
  (vipsffm.libpath.{vips|glib|gobject}.override 시스템 프로퍼티)
- @Fork(jvmArgsPrepend): --enable-native-access=ALL-UNNAMED 추가 (FFM 필수)
- build.gradle.kts: vips.impl=java25 시 Java 25 툴체인 선택

벤치마크 결과 (macOS, GraalVM 25.0.3, vips-ffm 1.9.6):
- resize 1920x1080: vips 0.202ms vs scrimage 71.16ms → 352배 빠름
- resize 1280x720:  vips 0.207ms vs scrimage 47.85ms → 231배 빠름
- encode JPEG:      vips 15.67ms vs scrimage 52.49ms → 3.3배 빠름
- encode PNG:       vips 49.88ms vs scrimage 94.87ms → 1.9배 빠름