@@ -31,7 +31,7 @@ import java.util.concurrent.TimeUnit
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @Warmup(iterations = 3, time = 1, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 1, timeUnit = TimeUnit.SECONDS)
-@Fork(1)
+@Fork(value = 1, jvmArgsPrepend = ["--enable-native-access=ALL-UNNAMED"])
 @State(Scope.Benchmark)
 class ImageResizeBenchmark {
 
